--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Graham Starr | Personal Website</title>
+    <title>Graham Starr | Writer, Designer, Developer, Humorist</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -30,11 +30,13 @@
         </a>
         <p></p>
 
-        <!-- <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a></p>
+        <!-- These sites are under construction
+        <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a></p>
         <p class="view"><a href="http://blog.gstarr.me/">Blog</a></p>
         <p class="view"><a href="https://github.com/gstarr">View My GitHub Profile</a></p>
         <p class="view"><a href="http://beyonce.horse/">beyonce.horse</a><small> (a real domain that I own)</small></p> -->
         <p class="view"><a href="http://dribbble.com/gstarr/">dribbble</a></p>
+        <p class="view"><a href="http://twitter.com/grahamstarr">twitter</a></p>
         <p class="view"><a href="http://files.gstarr.me/resume.pdf">résumé</a></p>
         <p class="view"><a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">email me</a></p>
 
@@ -45,16 +47,19 @@
                 I'm a writer, designer, humorist, and “data nerd” with experience in technical and analytical fields. People sometimes pay me to “analyze” things and I make a lot of kind of cool things that I always forget to add to my <a href="http://portfolio.gstarr.me/">portfolio</a>. I'm interested in technology-driven applications to interesting, innovative, and comprehensive storytelling 
                 <br>
                 <br>
-               	I'm currently a <a href="http://www.csmonitor.com/About/People/Graham-Starr">Dow Jones Digital Media Fellow</a> with the award-winning <a href="http://www.csmonitor.com/">Christian Science Monitor</a> in Boston. At the Monitor, I <a href="http://www.csmonitor.com/About/People/Graham-Starr/(view)/all">write about things and people</a>, and occasionally I design cool things for cool people. With <a href="https://www.newsfund.org/">Dow Jones</a>, I worked on a week-long multimedia project with other student journalists. In four days, the 14 of us created nine infographics, five podcasts, two videos, and four longform stories, wrapped into one <a href="http://djnf.atavist.com/">"Phantom in Phoenix"</a> multimedia project. 
+               	This summer, I was a <a href="http://www.csmonitor.com/About/People/Graham-Starr">Dow Jones Digital Media Fellow</a> with the award-winning <a href="http://www.csmonitor.com/">Christian Science Monitor</a> in Boston. At the Monitor, I <a href="http://www.csmonitor.com/About/People/Graham-Starr/(view)/all">wrote about things and people</a>, and designed cool things for cool people. I sat on the small team redesigning parts of the publication, and served as lead designer for mobile and tablet. 
+               	<br>
+               	<br>
+               	At the beginning of the summer with <a href="https://www.newsfund.org/">Dow Jones</a>, I was part of a 14-person investigative team trained at The Walter Cronkite School of Journalism and Mass Communication at Arizona State University. There, we worked on a week-long, intensive, digitally-integrated multimedia project: "<a href="http://djnf.atavist.com/">Phantom in Phoenix</a>." In four days, the 14 of us created nine infographics, five podcasts, two videos, and four longform stories, wrapped into <a href="http://djnf.atavist.com/">one comprehensive project</a>.
                 <br>
                 <br>
-                For two years, I was Editor of <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, Tufts University's oldest student-run humor and satire magazine, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">where I redesigned the magazine's layout and print organization</a>. I also established and built the magazine's first <a href="http://www.tuftszamboni.com/">web presence</a> and digital publishing platform. 
+                Before that, I was Editor of <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, Tufts University's oldest student-run humor and satire magazine, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">where I redesigned the magazine's layout and print organization</a>. I also established and built the magazine's first <a href="http://www.tuftszamboni.com/">web presence</a> and digital publishing platform. 
                 <br>
                 <br>
-                I enjoy doing "serious" things like design and data analysis, and have been involved in roles that have words like "research" and "intern" in the title. I also do less serious things like comedy, and I write long-form articles and screenplays and <a href="http://gstarr.github.io/">run-on sentences where everything is in "quotes"</a> and musicals and sometimes I build and design things with computers. If I have any free time, you can find me <a href="http://blog.gstarr.me/">writing</a>, <a href="http://www.behance.net/grahamstarr">designing</a>, learning a new skill, <a href="http://gstarr.github.io/">making lists</a>, rock climbing, or reading. 
+                I'm really interested in experimental approaches to media, bridging comedy, technology, and journalism in positive ways. I'll have a portfolio and blog and new projects up soon, but if you'd like to talk, see my work, or hire me, feel free to <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">reach out</a> at any time. 
               	<br>
               	<br>
-                Feel free to connect with me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. If you want, you can check out an (outdated) <a href="http://files.gstarr.me/resume.pdf">resume here</a> or <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">send me an email</a>!
+                You can connect with me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. If you want, you can check out an (somewhat outdated) <a href="http://files.gstarr.me/resume.pdf">resume here</a> or <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">send me an email</a>!
             </p>
             </div>
         </div>
