--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section>
         <h3>Hi!</h3>
         <p>
-                I'm a writer, designer, humorist, and “data nerd” with experience in technical and analytical fields. People sometimes pay me to “analyze” things and I make a lot of kind of cool things that I always forget to add to my <a href="http://portfolio.gstarr.me/">portfolio</a>. I'm interested in technology-driven applications to interesting, innovative, and comprehensive storytelling 
+                I'm a writer, designer, journalist, and humorist with experience in technical and analytical fields. People sometimes pay me to “analyze” things and I make a lot of kind of cool things that I always forget to add to my <a href="http://portfolio.gstarr.me/">portfolio</a>. I'm interested in technology-driven applications to interesting, innovative, and comprehensive storytelling 
                 <br>
                 <br>
                	This summer, I was a <a href="http://www.csmonitor.com/About/People/Graham-Starr">Dow Jones Digital Media Fellow</a> with the award-winning <a href="http://www.csmonitor.com/">Christian Science Monitor</a> in Boston. At the Monitor, I <a href="http://www.csmonitor.com/About/People/Graham-Starr/(view)/all">wrote about things and people</a>, and designed cool things for cool people. I sat on the small team redesigning parts of the publication, and served as lead designer for mobile and tablet. 
