welp grammatical error

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 I'm really interested in experimental approaches to media, bridging comedy, technology, and journalism in positive ways. If you'd like to talk, see my work, or hire me, feel free to <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">reach out</a> at any time. 
               	<br>
               	<br>
-                You can connect with me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. If you want, you can check out an (somewhat outdated) <a href="http://files.gstarr.me/resume.pdf">resume here</a> or <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">send me an email</a>!
+                You can connect with me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. If you want, you can check out my (somewhat outdated) <a href="http://files.gstarr.me/resume.pdf">resume here</a> or <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">send me an email</a>!
             </p>
             </div>
         </div>
