added natsec stuff i guess

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                 Before that, I was Editor-in-Chief of <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, Tufts University's premiere humor and satire magazine, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">where I redesigned the magazine's layout and print organization</a> and managed its 50-person staff. I also established and built the magazine's first <a href="http://www.tuftszamboni.com/">digital publishing platform</a> and grew readership by more than 600%.
                 <br>
                 <br>
+                Before all of those things, for three and a half years, I worked in <a href="http://www.sqrrl.com/">cyber security</a> and national security consulting. 
+                <br>
+                <br>
                 I'm really interested in experimental approaches to media, bridging comedy, technology, and journalism in positive ways. If you'd like to talk, see my work, or hire me, feel free to <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">reach out</a> at any time. 
               	<br>
               	<br>
