Process 1 of omitting irrelevant things

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section>
         <h3>Hi!</h3>
         <p>
-                I'm a writer, designer, journalist, and humorist with experience in technical and analytical fields. I am often hired to “analyze” things and I make a lot of kind of cool things that I always forget to add to my currently-under-construction <a href="http://portfolio.gstarr.me/">portfolio</a> (for published works, <a href="http://grahamstarr.contently.com/">click here</a>). I also do <a href="http://twitter.com/grahamstarr">comedy and humor things</a> and am interested in creative and innovative approaches to comprehensive storytelling.
+                I'm a writer, designer, journalist, and humorist with experience in technical and analytical fields. I am often hired to “analyze” things and I make a lot of kind of cool things that I always forget to add to my currently-under-construction <a href="http://portfolio.gstarr.me/">portfolio</a> (for published works, <a href="http://grahamstarr.contently.com/">click here</a>). I'm interested in creative and innovative approaches to comprehensive storytelling.
                 <br>
                 <br>
                	This summer, I was a <a href="http://www.csmonitor.com/About/People/Graham-Starr">Dow Jones Digital Media Fellow</a> with the award-winning <a href="http://www.csmonitor.com/">Christian Science Monitor</a> in Boston. There, I <a href="http://www.csmonitor.com/About/People/Graham-Starr/(view)/all">wrote stories for the Technology and Innovations desks</a>, and served as the mobile and tablet lead on the website's feature redesign. After my fellowship ended, I was kept on as a freelance designer.
