--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </a>
         <p></p>
 
-        <!-- These sites are under construction
-        <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a></p>
-        <p class="view"><a href="http://blog.gstarr.me/">Blog</a></p>
+        
+        <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a></p> 
+<!--        <p class="view"><a href="http://blog.gstarr.me/">Blog</a></p>
         <p class="view"><a href="https://github.com/gstarr">View My GitHub Profile</a></p>
         <p class="view"><a href="http://beyonce.horse/">beyonce.horse</a><small> (a real domain that I own)</small></p> -->
         <p class="view"><a href="http://dribbble.com/gstarr/">dribbble</a></p>
