added projects tab

--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
         </a>
         <p></p>
 
-        
-        <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a></p> 
+        <p class="view"><a href="http://gstarr.me/projects">projects</a></p> 
+        <p class="view"><a href="http://portfolio.gstarr.me/">portfolio</a></p> 
 <!--        <p class="view"><a href="http://blog.gstarr.me/">Blog</a></p>
         <p class="view"><a href="https://github.com/gstarr">View My GitHub Profile</a></p>
         <p class="view"><a href="http://beyonce.horse/">beyonce.horse</a><small> (a real domain that I own)</small></p> -->
-        <p class="view"><a href="http://dribbble.com/gstarr/">dribbble</a></p>
         <p class="view"><a href="http://files.gstarr.me/resume.pdf">résumé</a></p>
         <p class="view"><a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">email me</a></p>
 
