--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <p></p>
 
         <p class="view"><a href="http://gstarr.me/projects">projects</a></p> 
-        <p class="view"><a href="http://portfolio.gstarr.me/">portfolio</a></p> 
-<!--        <p class="view"><a href="http://blog.gstarr.me/">Blog</a></p>
+<!--          <p class="view"><a href="http://portfolio.gstarr.me/">portfolio</a></p> 
+        <p class="view"><a href="http://blog.gstarr.me/">Blog</a></p>
         <p class="view"><a href="https://github.com/gstarr">View My GitHub Profile</a></p>
         <p class="view"><a href="http://beyonce.horse/">beyonce.horse</a><small> (a real domain that I own)</small></p> -->
         <p class="view"><a href="http://files.gstarr.me/resume.pdf">résumé</a></p>
