--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
 <!--          <p class="view"><a href="http://portfolio.gstarr.me/">portfolio</a></p> 
         <p class="view"><a href="http://blog.gstarr.me/">Blog</a></p>
         <p class="view"><a href="https://github.com/gstarr">View My GitHub Profile</a></p>
-        <p class="view"><a href="http://beyonce.horse/">beyonce.horse</a><small> (a real domain that I own)</small></p> -->
-        <p class="view"><a href="http://files.gstarr.me/resume.pdf">résumé</a></p>
+        <p class="view"><a href="http://beyonce.horse/">beyonce.horse</a><small> (a real domain)</small></p> -->
         <p class="view"><a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">email me</a></p>
 
       </header>
       <section>
         <h3>Hi!</h3>
         <p>
-                I'm a writer, designer, journalist, and humorist with experience in technical and analytical fields. I am often hired to “analyze” things and I make a lot of kind of cool things that I always forget to add to my currently-under-construction <a href="http://portfolio.gstarr.me/">portfolio</a> (for published works, <a href="http://grahamstarr.contently.com/">click here</a>). I'm interested in creative and innovative approaches to comprehensive storytelling.
+                I'm a writer, designer, journalist, and humorist with experience in technical and analytical fields. I am often hired to “analyze” things and I make a lot of kind of cool things that I always forget to add to my currently-under-construction <a href="http://gstarr.me/projects">portfolio</a>. I'm interested in creative and innovative approaches to comprehensive storytelling.
                 <br>
                 <br>
                	This summer, I was a <a href="http://www.csmonitor.com/About/People/Graham-Starr">Dow Jones Digital Media Intern</a> with the award-winning <a href="http://www.csmonitor.com/">Christian Science Monitor</a> in Boston. There, I <a href="http://www.csmonitor.com/About/People/Graham-Starr/(view)/all">wrote stories for the Technology and Innovations desks</a>, and served as the mobile and tablet lead on the website's feature redesign. After my fellowship ended, I was kept on as a freelance designer.
