--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Graham Starr | Writer, Designer, Journalist, Humorist</title>
+    <title>Graham Starr | Classically-Trained Beatboxer, Garbage Human</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -41,7 +41,7 @@
       <section>
         <h3>Hi!</h3>
         <p>
-                I'm <b>Graham Starr</b>, a writer, designer, journalist, and humorist who makes things with computers and has experience in technical and analytical fields. I am often hired to “analyze” or "build" things and I make a lot of kind of cool things that I always forget to add to my constantly-under-construction <a href="http://gstarr.me/projects">portfolio</a>. I'm interested in creative and innovative approaches to comprehensive storytelling. Currently, I work at <i><a href="http://www.theatlantic.com/">The Atlantic</a></i>.
+                I'm <b>Graham Starr</b>, a writer, designer, journalist, and humorist who makes things with computers and has experience in technical and analytical fields. I am often hired to “analyze” or "build" things and I make a lot of kind of cool things that I always forget to add to my constantly-under-construction <a href="http://gstarr.me/projects">portfolio</a>. I'm interested in creative and innovative approaches to comprehensive storytelling. Currently, I work on Special Projects at <i><a href="http://www.theatlantic.com/">The Atlantic</a></i>.
                 <br>
                 <br>
                	Before I was at <i>The Atlantic</i>, I was a media consultant at the UN Refugee Agency. Before that, I was a <a href="http://www.csmonitor.com/About/People/Graham-Starr">Dow Jones Digital Intern</a> with the <a href="http://www.csmonitor.com/">Christian Science Monitor</a> in Boston. There, I <a href="http://www.csmonitor.com/About/People/Graham-Starr/(view)/all">wrote stories for the Technology and Innovations desks</a>, and served as the mobile and tablet lead on the website's feature redesign.
