--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
       <section>
         <h3>Hi!</h3>
         <p>
-                I'm <b>Graham Starr</b>, a writer, designer, journalist, and humorist who makes things with computers and has experience in technical and analytical fields. I am often hired to “analyze” or "build" things and I make a lot of kind of cool things that I always forget to add to my constantly-under-construction <a href="http://gstarr.me/projects">portfolio</a>. I'm interested in creative and innovative approaches to comprehensive storytelling. Currently, I work on Special Projects at <i><a href="http://www.theatlantic.com/">The Atlantic</a></i>.
+                I'm <b>Graham Starr</b>, a writer, designer, journalist, and humorist who makes things with computers and has experience in technical and analytical fields. I am often hired to “analyze” or "build" things and I make a lot of kind of cool things that I always forget to add to my constantly-under-construction <a href="http://gstarr.me/projects">portfolio</a>. I'm interested in creative and innovative approaches to comprehensive storytelling. Currently, I work on Projects at <i><a href="http://www.theatlantic.com/">The Atlantic</a></i>.
                 <br>
                 <br>
-               	Before I was at <i>The Atlantic</i>, I was a media consultant at the UN Refugee Agency. Before that, I was a <a href="http://www.csmonitor.com/About/People/Graham-Starr">Dow Jones Digital Intern</a> with the <a href="http://www.csmonitor.com/">Christian Science Monitor</a> in Boston. There, I <a href="http://www.csmonitor.com/About/People/Graham-Starr/(view)/all">wrote stories for the Technology and Innovations desks</a>, and served as the mobile and tablet lead on the website's feature redesign.
+               	Before I was at <i>The Atlantic</i>, I was a media consultant at the UN Refugee Agency. Before that, I was a <a href="http://www.csmonitor.com/About/People/Graham-Starr">Dow Jones Digital Intern</a> with the <a href="http://www.csmonitor.com/">Christian Science Monitor</a>, where I <a href="http://www.csmonitor.com/About/People/Graham-Starr/(view)/all">wrote about technology for the Innovations desk</a>, and served as the mobile lead on the <a href="http://gstarr.me/projects/design/">website's feature redesign</a>.
                	<br>
                	<br>
-               	In May, the <a href="http://www.newsfund.org">Dow Jones News Fund</a> sent me to a bootcamp program at the Walter Cronkite School of Journalism and Mass Communication at Arizona State University with the other <a href="https://www.newsfund.org/uploads/2015interns503.htm">digital media interns</a>. There, we were trained in AP style and multimedia production, and worked on a week-long, intensive, digitally-integrated multimedia project: "<a href="http://djnf.atavist.com/">Phantom in Phoenix</a>." In four days, the 14 of us created nine infographics, five podcasts, two videos, and four longform stories, wrapped into <a href="http://djnf.atavist.com/">one comprehensive project</a>.
+               	Last year, the <a href="http://www.newsfund.org">Dow Jones News Fund</a> sent me to a bootcamp program at the Walter Cronkite School of Journalism and Mass Communication at Arizona State University with the other <a href="https://www.newsfund.org/uploads/2015interns503.htm">digital media interns</a>. There, we were trained in AP style and multimedia production, and worked on a week-long, intensive, digitally-integrated multimedia project: "<a href="http://djnf.atavist.com/">Phantom in Phoenix</a>." In four days, the 14 of us created nine infographics, five podcasts, two videos, and four longform stories, wrapped into <a href="http://djnf.atavist.com/">one comprehensive project</a>.
                 <br>
                 <br>
-                Before that, I was Editor-in-Chief of <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, Tufts University's premiere humor and satire magazine, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">where I redesigned the magazine's layout and print organization</a> and managed its 60-person staff. I also established and built the magazine's first <a href="http://www.tuftszamboni.com/">digital publishing platform</a> and grew readership by more than 600%.
+                Before I was a professional human being, I was the Editor-in-Chief of <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, Tufts University's premiere humor and satire magazine, where I revived the publication, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">redesigned the magazine's layout and print organization</a>, and managed its 60-person staff. I also established and built <i>The Zamboni</i>'s first <a href="http://www.tuftszamboni.com/">digital publishing platform</a> and grew readership and staff by more than 600%.
                 <br>
                 <br>
-                I'm really interested in experimental approaches to media, bridging comedy, technology, and journalism in positive ways. If you'd like to talk, see my work, or hire me to do something cool for you, feel free to <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">reach out</a> at any time. 
+                I'm really interested in experimental approaches to media, bridging comedy, technology, and journalism in positive ways. If you'd like to talk, see my work, or hire me to do something cool for you, feel free to <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">email me</a> at any time. 
               	<br>
               	<br>
-                You can connect with me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. If you want to get in touch, please feel free to <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">email me</a> at any time!
+                You can also connect with me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. 
             </p>
             </div>
         </div>
       </section>
       <footer>
-        <p><small>Hosted on <a href="http://github.com/gstarr">GitHub Pages</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>; mobile css by <a href=http://tarrh.me/>Nate Tarrh</a></small></p>
+        <p><small>Hosted on <a href="http://github.com/gstarr">GitHub Pages</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
