--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Graham Starr | Garbage Human, Freelance Intern</title>
+    <title>Graham Starr | Humsn Garbage and Writer</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
