--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Graham Starr | Human Garbage, but Also a Writer</title>
-    <meta name="description" content="Graham Starr is a freelance writer, designer, journalist, and humorist currently at <em>The Atlantic</em>.">
+    <meta name="description" content="Graham Starr is a writer, designer, journalist, and humorist currently at The Atlantic.">
     <meta name="keywords" content="journalist, humor, comedy, technology, magazine">
     <meta name="author" content="Graham Starr">
 
