--- a/index.html
+++ b/index.html
@@ -42,27 +42,19 @@
 
       </header>
       <section>
+          <center><p><b><i><a href="http://www.gstarr.me/projects/">My website has moved to a nicer looking website.</a></i></b></p></center>
         <h3>Hi!</h3>
-        <p>
-                I'm <b>Graham Starr</b>, a writer, designer, journalist, and humorist who makes things with computers and has experience in technical and analytical fields. I am often hired to “analyze” or "build" things and I make a lot of kind of cool things that I always forget to add to my constantly-under-construction <a href="http://gstarr.me/projects">portfolio</a>. I'm interested in creative and innovative approaches to comprehensive storytelling. Currently, I work on Projects at <i><a href="http://www.theatlantic.com/">The Atlantic</a></i>.
-                <br>
-                <br>
-               	Before I was at <i>The Atlantic</i>, I was a media consultant at the UN Refugee Agency. Before that, I was a <a href="http://www.csmonitor.com/About/People/Graham-Starr">Dow Jones Digital Intern</a> with the <a href="http://www.csmonitor.com/">Christian Science Monitor</a>, where I <a href="http://www.csmonitor.com/About/People/Graham-Starr/(view)/all">wrote about technology for the Innovations desk</a>, and served as the mobile lead on the <a href="http://gstarr.me/projects/design/">website's feature redesign</a>.
-               	<br>
-               	<br>
-               	Last year, the <a href="http://www.newsfund.org">Dow Jones News Fund</a> sent me to a bootcamp program at the Walter Cronkite School of Journalism and Mass Communication at Arizona State University with the other <a href="https://www.newsfund.org/uploads/2015interns503.htm">digital media interns</a>. There, we were trained in AP style and multimedia production, and worked on a week-long, intensive, digitally-integrated multimedia project: "<a href="http://djnf.atavist.com/">Phantom in Phoenix</a>." In four days, the 14 of us created nine infographics, five podcasts, two videos, and four longform stories, wrapped into <a href="http://djnf.atavist.com/">one comprehensive project</a>.
-                <br>
-                <br>
-                Before I was a professional human being, I was the Editor-in-Chief of <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, Tufts University's premiere humor and satire magazine, where I revived the publication, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">redesigned the magazine's layout and print organization</a>, and managed its 60-person staff. I also established and built <i>The Zamboni</i>'s first <a href="http://www.tuftszamboni.com/">digital publishing platform</a> and grew readership and staff by more than 600%.
-                <br>
-                <br>
-                I'm really interested in experimental approaches to media, bridging comedy, technology, and journalism in positive ways. If you'd like to talk, see my work, or hire me to do something cool for you, feel free to <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">email me</a> at any time. 
-              	<br>
-              	<br>
-                You can also connect with me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. 
-            </p>
-            </div>
-        </div>
+        <p>I'm <b>Graham Starr</b>, a journalist who makes things with math, art, and computers. Currently, I'm an editorial fellow on <a href="http://www.theatlantic.com"><i>The Atlantic</i></a>'s <a href="http://theatlantic.com/projects">special projects</a> team.</p>   
+
+<p>I'm interested in experimental media and the intersection of comedy, tech, and journalism. In 2016 so far, I've participated in <a href="http://www.comedyhackday.org/sf-2016">Comedy Hack Day</a>, where my team, <a href="http://www.equitableapp.com/">EquiTable</a> (formerly Equipay), <a href="https://www.youtube.com/watch?v=ZlR1Y2Lwz48">won the grand prize</a> with a bill-splitting app that uses Bureau of Labor Statistics data to account for historic wage inequity. I have also done things with <a href="http://www.stupidhackathon.com">Stupid Hackathon</a>, <a href="http://www.uselesspress.org/">The Useless Press</a>, and <a href="http://humorousreadings.tumblr.com/">An Evening of Humorous Readings</a>. </p>   
+
+<p>Before I was at <i>The Atlantic<i>, I was a media consultant with the UN Refugee Agency's (UNHCR) <a href="http://projecthive.nyc/">digital innovation incubator</a>. Before that, I was a *Dow Jones News Fund* digital intern at the <a href="http://www.csmonitor.com/About/People/Graham-Starr"><i>Christian Science Monitor</i></a>, where I wrote about technology and served on the website's redesign team. I was also the story designer and web editor for the <i>Dow Jones News Fund</i>’s "<a href="http://djnf.atavist.com/">Phantom in Phoenix</a>" multimedia reporting project on <i>The Phantom of the Opera</i>'s U.S. tour show in Phoenix, Arizona.  
+
+<p>In college, I was the editor-in-chief of Tufts University's humor magazine, <a href="http://www.tuftszamboni.com/"><i>The Zamboni</i></a>. I revived and <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/">redesigned</a> the decades-old publication, launching its first website and growing its staff from five to 60. Currently, the group is one of the most active on campus, developing experimental comedy projects in addition to printing its monthly magazine.</p>    
+
+<p>More of my résumé can be seen by looking at <a href="http://gstarr.me/projects/resume">my résumé</a>.</p>  
+
+<p>If you'd like to hire me to do something cool for you, or just want to chat, please don't hesitate to <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham%21">send me an email</a>. I'd love to hear from you!</p>   
       </section>
       <footer>
         <p><small>Hosted on <a href="http://github.com/gstarr">GitHub Pages</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>
