--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       </header>
       <section>
-          <center><p><b><i><a href="http://www.gstarr.me/projects/">My website has moved to a nicer looking website.</a></i></b></p></center>
+          <center><p><b><i><a href="http://www.gstarr.me/projects/">My website has moved to a nicer-looking website.</a></i></b></p></center>
         <h3>Hi!</h3>
         <p>I'm <b>Graham Starr</b>, a journalist who makes things with math, art, and computers. Currently, I'm an editorial fellow on <a href="http://www.theatlantic.com"><i>The Atlantic</i></a>'s <a href="http://theatlantic.com/projects">special projects</a> team.</p>   
 
